--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "openai": "^4.98.0"
   }
 }
