set name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-app",
+  "name": "openai-tool-example",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
